* adding in Graph threading.